# secret_santa

./: Dockerfile  app.py  logger.py  participants.json  pyproject.toml  readme.md  test.json
tests/: test_app.py
